--- a/figma-textlint/package.json
+++ b/figma-textlint/package.json
@@ -1,11 +1,16 @@
 {
   "name": "figma-textlint",
   "version": "1.0.0",
-  "description": "Your Figma plugin",
+  "description": "",
   "main": "code.js",
   "scripts": {
+    "dev": "tsc -w",
     "build": "tsc -p tsconfig.json"
   },
-  "author": "",
-  "license": ""
+  "author": "macneko-ayu",
+  "license": "MIT",
+  "devDependencies": {
+    "@figma/plugin-typings": "^1.26.0",
+    "typescript": "^4.3.5"
+  }
 }
