Add enablePrivatePluginApi to manifest.json

--- a/figma-textlint/manifest.json
+++ b/figma-textlint/manifest.json
@@ -3,5 +3,6 @@
   "id": "1000962880161744998",
   "api": "1.0.0",
   "main": "code.js",
-  "ui": "ui.html"
+  "ui": "ui.html",
+  "enablePrivatePluginApi": true
 }
